#1: modified API [POST] products
