# utils/validator-helper.js
@@ -9,6 +9,8 @@ let validateResult = (req, res, next)=>{
 
 // 參數檢查 單筆product資料 
 let productInfoValid = [
+    body("merSerNo").exists().withMessage("merSerNo is required"),
+    body("prodTypeSerNo").exists().withMessage("prodTypeSerNo is required"),
     body("prodName").trim().notEmpty().withMessage("prodName is required"),
     body("prodType").exists().withMessage("prodType is required"),
     body("prodPrice").exists().withMessage("prodPrice is required"),
